testdata/baselines/reference/compiler/unicodeSurrogatesInStringLiterals.errors.txt
unicodeSurrogatesInStringLiterals(3,1): error TS1128: Declaration or statement expected.
unicodeSurrogatesInStringLiterals(3,42): error TS1003: Identifier expected.
unicodeSurrogatesInStringLiterals(3,42): error TS1005: ',' expected.
unicodeSurrogatesInStringLiterals(6,1): error TS1128: Declaration or statement expected.
unicodeSurrogatesInStringLiterals(6,33): error TS1005: ',' expected.
unicodeSurrogatesInStringLiterals(6,33): error TS1003: Identifier expected.
unicodeSurrogatesInStringLiterals(9,1): error TS1128: Declaration or statement expected.
unicodeSurrogatesInStringLiterals(9,32): error TS1005: ',' expected.
unicodeSurrogatesInStringLiterals(9,32): error TS1003: Identifier expected.
unicodeSurrogatesInStringLiterals(12,1): error TS1128: Declaration or statement expected.
unicodeSurrogatesInStringLiterals(12,43): error TS1003: Identifier expected.
unicodeSurrogatesInStringLiterals(12,43): error TS1005: ',' expected.
unicodeSurrogatesInStringLiterals(15,1): error TS1128: Declaration or statement expected.
unicodeSurrogatesInStringLiterals(15,41): error TS1005: ',' expected.
unicodeSurrogatesInStringLiterals(15,41): error TS1003: Identifier expected.
unicodeSurrogatesInStringLiterals(18,1): error TS1128: Declaration or statement expected.
unicodeSurrogatesInStringLiterals(18,42): error TS1005: ',' expected.
unicodeSurrogatesInStringLiterals(18,42): error TS1003: Identifier expected.

==== unicodeSurrogatesInStringLiterals (18 errors) ====
    
    // low-high surrogate pair - the "correct" case
    export const highLow = "\ud83d\ude03" as const;
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
                                             ~~~~~
!!! error TS1003: Identifier expected.
                                             ~~~~~
!!! error TS1005: ',' expected.
    
    // high surrogate
    export const high = "\ud83d" as const;
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
                                    ~~~~~
!!! error TS1005: ',' expected.
                                    ~~~~~
!!! error TS1003: Identifier expected.
    
    // low surrogate
    export const low = "\ude03" as const;
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
                                   ~~~~~
!!! error TS1005: ',' expected.
                                   ~~~~~
!!! error TS1003: Identifier expected.
    
    // two high surrogates
    export const highHigh = "\ud83d\ud83d" as const;
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
                                              ~~~~~
!!! error TS1003: Identifier expected.
                                              ~~~~~
!!! error TS1005: ',' expected.
    
    // two low surrogates
    export const lowLow = "\ude03\ude03" as const;
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
                                            ~~~~~
!!! error TS1005: ',' expected.
                                            ~~~~~
!!! error TS1003: Identifier expected.
    
    // swapped expected order of surrogates
    export const lowHigh = "\ude03\ud83d" as const;
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
                                             ~~~~~
!!! error TS1005: ',' expected.
                                             ~~~~~
!!! error TS1003: Identifier expected.
    
